[gd_scene load_steps=3 format=3 uid="uid://d30mduusp81ch"]

[ext_resource type="Script" uid="uid://chylhx2226a48" path="res://ui/search/search.gd" id="1_224fo"]
[ext_resource type="Texture2D" uid="uid://clbvp8v3ryv4q" path="res://ui/icons/magnifying-glass.svg" id="1_oavdf"]

[node name="Search" type="HBoxContainer"]
size_flags_horizontal = 3
script = ExtResource("1_224fo")

[node name="ItemSearch" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search..."

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.298039, 0.282353, 0.239216, 1)
texture_filter = 2
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
texture = ExtResource("1_oavdf")
expand_mode = 1
stretch_mode = 5

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="text_changed" from="ItemSearch" to="." method="_on_item_search_text_changed"]
